<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 Mateusz Widuch

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  <string name="app_name">Bake It</string>
  <string name="title_step_list">Steps</string>
  <string name="title_step_detail">Step Detail</string>
  <string name="ingredients_label">Ingredients</string>

  <!-- Accessibility -->
  <string name="a11y_recipe_image">Recipe Image</string>
  <string name="a11y_toggle_ingredients_list">Toggle ingredients list</string>
  <string name="a11y_recipe_picture">Recipe picture</string>
  <string name="a11y_video_fullscreen_btn">Fullscreen</string>

  <!-- Recipe List -->
  <string name="error_empty_list">Oops! You don\'t have any recipes</string>

  <!-- Recipe List Item-->
  <string name="recipe_servings">%1$d Servings</string>

  <!-- Recipe Detail Activity -->
  <string name="recipe_ingredients_label">Ingredients</string>
  <string name="recipe_ingredients_for">for</string>
  <string name="list_bullet">\u2022</string>
  <string name="recipe_steps_label">How to bake?</string>

  <!-- Step Detail Activity -->
  <string name="step_number">Step %1$d</string>
  <string name="step_previous_btn">prev</string>
  <string name="step_next_btn">next</string>

  <!-- Widget -->
  <string name="add_widget">Add widget</string>
  <string name="widget_config_label">Choose Recipe:</string>
  <string name="widget_config_cancel">Cancel</string>
  <string name="widget_config_apply">Apply</string>
  <string name="empty_recipe_database">There are no recipes saved in Bake It. Please connect to the Internet first.</string>

  <!-- Error Messages -->
  <string name="snackbar_no_network">Please connect to the internet to get latest recipes.</string>
  <string name="video_no_network">Internet connection is required to play this video</string>
  <string name="video_playback_paused">Playback paused due to lost connection</string>

</resources>
