<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/widget_card"
  android:orientation="vertical">

  <FrameLayout
    android:id="@+id/widget_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_bar"
    android:elevation="1dp">

    <TextView
      android:id="@+id/widget_recipe_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/content_spacing"
      android:fontFamily="sans-serif-light"
      android:gravity="center"
      android:textAllCaps="true"
      android:textAppearance="@style/TextAppearance.AppCompat.Headline"
      android:textColor="@color/colorBackground"/>

  </FrameLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E0E0E0"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/widget_ingredients_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/content_spacing"
      android:layout_marginBottom="@dimen/content_spacing"
      android:layout_marginStart="@dimen/content_spacing"
      android:layout_marginEnd="@dimen/ingredients_label_offset"
      android:fontFamily="sans-serif-medium"
      android:textAllCaps="true"
      android:textSize="16sp"
      android:textColor="@color/colorText"
      android:text="@string/recipe_ingredients_label"/>

    <TextView
      android:id="@+id/widget_ingredients_for"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/content_spacing"
      android:layout_marginBottom="@dimen/content_spacing"
      android:fontFamily="sans-serif-light"
      android:textSize="14sp"
      android:textColor="@color/colorText"
      android:text="@string/recipe_ingredients_for"/>

    <TextView
      android:id="@+id/widget_recipe_servings"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/content_spacing"
      android:layout_marginBottom="@dimen/content_spacing"
      android:layout_marginStart="@dimen/ingredients_label_offset"
      android:layout_marginEnd="@dimen/content_spacing"
      android:fontFamily="sans-serif-medium"
      android:textSize="14sp"
      android:textColor="@color/colorPrimary"
      android:text="@string/recipe_servings"/>

  </LinearLayout>

  <ListView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/content_spacing"/>

</LinearLayout>